--- a/config.json
+++ b/config.json
@@ -6,5 +6,5 @@
     "xid_url": "https://api.opentripmap.com/0.1/en/places/xid/",
     "apikey": "5ae2e3f221c38a28845f05b6d815b48c87fb357da5a1ed52168480c1",
     "format": "json",
-    "debug": true
+    "debug": false
 }
